--- a/css/style2.css
+++ b/css/style2.css
@@ -259,7 +259,8 @@ ol {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
+	background: #5fbf856c
+    ;
 	content: "";
 	z-index: -1;
 }
