--- a/css/style3.css
+++ b/css/style3.css
@@ -458,7 +458,8 @@ ol {
 .single-slide {
 	height: 895px;
 	padding-top: 173px;
-	text-align: center;
+	text-align: right;
+	padding-right: 50px;
 }
 
 .single-slide .play-btn {
@@ -478,7 +479,7 @@ ol {
 
 .single-slide h1 {
 	color: #fff;
-	font-size: 130px;
+	font-size: 70px;
 	font-weight: 500;
 	margin-bottom: 45px;
 	position: relative;
